--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiProductoView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiProductoView.fxml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="885.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiProductoViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="885.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiProductoViewController">
    <children>
       <TabPane layoutX="6.0" layoutY="6.0" prefHeight="566.0" prefWidth="856.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -40,9 +47,9 @@
                         <ComboBox fx:id="comboBoxTipoProducto" layoutX="629.0" layoutY="91.0" prefHeight="25.0" prefWidth="212.0" promptText="Seleccione el tipo de producto" />
                         <Button fx:id="btnAniadirImagen" layoutX="629.0" layoutY="137.0" mnemonicParsing="false" onAction="#aniadirImagenProducto" prefHeight="25.0" prefWidth="211.0" style="-fx-background-color: #0697AE;" text="Añadir imagen" textFill="WHITE" />
                         <Label layoutX="500.0" layoutY="199.0" text="Previsualización" />
-                        <ImageView fx:id="imageViewPrevisualizacion" fitHeight="186.0" fitWidth="257.0" layoutX="642.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imageViewPrevisualizacion" fitHeight="186.0" fitWidth="257.0" layoutX="582.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../../co.edu.uniquindio.pr3.subastas/images/Martillo.jpeg" />
+                              <Image url="@../../../../../co.edu.uniquindio.pr3.subastas/images/Martillo.jpeg" />
                            </image>
                         </ImageView>
                         <Button fx:id="btnAniadirProducto" layoutX="308.0" layoutY="453.0" mnemonicParsing="false" onAction="#aniadirProducto" prefHeight="44.0" prefWidth="118.0" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Añadir" textFill="WHITE">
