--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiProductoView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiProductoView.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -47,11 +46,7 @@
                         <ComboBox fx:id="comboBoxTipoProducto" layoutX="629.0" layoutY="91.0" prefHeight="25.0" prefWidth="212.0" promptText="Seleccione el tipo de producto" />
                         <Button fx:id="btnAniadirImagen" layoutX="629.0" layoutY="137.0" mnemonicParsing="false" onAction="#aniadirImagenProducto" prefHeight="25.0" prefWidth="211.0" style="-fx-background-color: #0697AE;" text="Añadir imagen" textFill="WHITE" />
                         <Label layoutX="500.0" layoutY="199.0" text="Previsualización" />
-                        <ImageView fx:id="imageViewPrevisualizacion" fitHeight="186.0" fitWidth="257.0" layoutX="582.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../../../co.edu.uniquindio.pr3.subastas/images/Martillo.jpeg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imageViewPrevisualizacion" fitHeight="186.0" fitWidth="257.0" layoutX="582.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true" />
                         <Button fx:id="btnAniadirProducto" layoutX="308.0" layoutY="453.0" mnemonicParsing="false" onAction="#aniadirProducto" prefHeight="44.0" prefWidth="118.0" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Añadir" textFill="WHITE">
                            <font>
                               <Font size="19.0" />
@@ -71,7 +66,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Pane prefHeight="64.0" prefWidth="856.0" style="-fx-background-color: #0697AE;">
+                        <Pane prefHeight="64.0" prefWidth="885.0" style="-fx-background-color: #0697AE;">
                            <children>
                               <Label layoutX="374.0" layoutY="24.0" />
                               <Label layoutX="398.0" layoutY="17.0" text="Mis productos" textFill="WHITE">
@@ -81,16 +76,22 @@
                               </Label>
                            </children>
                         </Pane>
-                        <TableView fx:id="tableViewProductos" layoutY="64.0" prefHeight="403.0" prefWidth="856.0">
+                        <TableView fx:id="tableViewProductos" layoutY="64.0" prefHeight="403.0" prefWidth="885.0">
                           <columns>
                             <TableColumn fx:id="columNombreProducto" prefWidth="131.0" text="Nombre" />
                             <TableColumn fx:id="columCodigo" prefWidth="100.0" text="Código" />
                               <TableColumn fx:id="columPrecio" prefWidth="89.0" text="Precio" />
                               <TableColumn fx:id="columTipoProducto" prefWidth="151.0" text="Tipo de producto" />
-                              <TableColumn fx:id="columDescripcion" prefWidth="384.0" text="Descripción" />
+                              <TableColumn fx:id="columnAnunciado" prefWidth="83.0" text="¿Anunciado?" />
+                              <TableColumn fx:id="columDescripcion" prefWidth="330.0" text="Descripción" />
                           </columns>
                         </TableView>
                         <Button fx:id="btnEliminarProducto" layoutX="396.0" layoutY="481.0" mnemonicParsing="false" onAction="#eliminarProducto" style="-fx-background-color: red;" text="Eliminar producto" textFill="WHITE" />
+                        <Button fx:id="btnActualizarProducto1" layoutX="743.0" layoutY="475.0" mnemonicParsing="false" onAction="#actualizarProductoInfo" prefHeight="37.0" prefWidth="117.0" style="-fx-background-color: white; -fx-border-color: #0697AE; -fx-cursor: hand;" text="Actualizar" textFill="#0697aec2" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="743.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="475.0">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Button>
                      </children>
                   </AnchorPane>
             </content>
