--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiAnuncioView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiAnuncioView.fxml
@@ -1,10 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="855.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiAnuncioViewController" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="885.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiAnuncioViewController">
+   <children>
+      <TabPane layoutX="8.0" prefHeight="556.0" prefWidth="855.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <tabs>
+          <Tab text="Informacion Anuncio">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: white;">
+                     <children>
+                        <Label layoutX="38.0" layoutY="119.0" text="Nombre del anunciante" />
+                        <Label layoutX="38.0" layoutY="156.0" text="Código" />
+                        <Label layoutX="38.0" layoutY="196.0" text="Fecha de publicación" />
+                        <Label layoutX="38.0" layoutY="234.0" text="Fecha Final" />
+                        <Label layoutX="43.0" layoutY="271.0" text="Producto" />
+                        <Pane layoutY="-3.0" prefHeight="76.0" prefWidth="885.0" style="-fx-background-color: #0697AE;">
+                           <children>
+                              <Label layoutX="307.0" layoutY="24.0" text="Información del anuncio" textFill="WHITE">
+                                 <font>
+                                    <Font name="Bookman Old Style" size="24.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </Pane>
+                        <TextField fx:id="txtNombreAnunciante" layoutX="209.0" layoutY="115.0" prefHeight="25.0" prefWidth="286.0" />
+                        <TextField fx:id="txtCodigoAnuncio" layoutX="209.0" layoutY="144.0" prefHeight="25.0" prefWidth="286.0" />
+                        <TextField fx:id="txtProducto" layoutX="209.0" layoutY="267.0" prefHeight="25.0" prefWidth="286.0" />
+                        <DatePicker fx:id="txtFechaInicio" layoutX="209.0" layoutY="192.0" prefHeight="25.0" prefWidth="285.0" />
+                        <DatePicker fx:id="txtFechaFinal" layoutX="210.0" layoutY="230.0" prefHeight="25.0" prefWidth="285.0" />
+                        <ImageView fitHeight="219.0" fitWidth="210.0" layoutX="582.0" layoutY="82.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/AnuncioIcon.jpeg" />
+                           </image>
+                        </ImageView>
+                        <Button fx:id="btnNuevo" layoutX="266.0" layoutY="463.0" mnemonicParsing="false" onAction="#limpiarCampos" onKeyPressed="#limpiarCamposTecla" prefHeight="37.0" prefWidth="111.0" style="-fx-background-color: white; -fx-border-color: #0697AE; -fx-cursor: hand;" text="Nuevo" textFill="#0697ae">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="btnAnunciar" layoutX="428.0" layoutY="463.0" mnemonicParsing="false" onAction="#anunciarProducto" onKeyPressed="#anunciarProductoTecla" prefHeight="37.0" prefWidth="111.0" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Anunciar" textFill="WHITE">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="btnActualizar" layoutX="592.0" layoutY="463.0" mnemonicParsing="false" onAction="#actualizarAnuncio" onKeyPressed="#actualizarAnuncioTecla" prefHeight="37.0" prefWidth="111.0" style="-fx-background-color: white; -fx-border-color: #0697AE; -fx-cursor: hand;" text="Actualizar" textFill="#0697ae">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Mis anuncios">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="btnEliminar" layoutX="428.0" layoutY="474.0" mnemonicParsing="false" onAction="#eliminarAnuncio" onKeyPressed="#eliminarAnuncioTecla" prefHeight="19.0" prefWidth="93.0" style="-fx-background-color: red; -fx-cursor: hand;" text="Eliminar" textFill="WHITE">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Button>
+                        <Pane prefHeight="76.0" prefWidth="885.0" style="-fx-background-color: #0697AE;">
+                           <children>
+                              <Label layoutX="380.0" layoutY="24.0" text="Mis productos" textFill="WHITE">
+                                 <font>
+                                    <Font name="Bookman Old Style" size="24.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </Pane>
+                        <TableView fx:id="tableViewAnuncios" layoutY="76.0" prefHeight="391.0" prefWidth="885.0">
+                           <columns>
+                              <TableColumn fx:id="columNombreUsuario" prefWidth="120.0" text="Nombre usuario" />
+                              <TableColumn fx:id="columCodigoAnuncio" prefWidth="105.0" text="Código" />
+                              <TableColumn fx:id="columFechaInicio" prefWidth="141.0" text="Fecha de publicacion" />
+                              <TableColumn fx:id="columFechaFinal" prefWidth="105.0" text="Fecha limite" />
+                              <TableColumn fx:id="columProducto" prefWidth="131.0" text="Producto" />
+                              <TableColumn fx:id="columPujas" prefWidth="282.0" text="Pujas" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+   </children>
+</AnchorPane>
