--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiAnuncioView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiAnuncioView.fxml
@@ -32,7 +32,6 @@
                         </Pane>
                         <TextField fx:id="txtNombreAnunciante" layoutX="209.0" layoutY="115.0" prefHeight="25.0" prefWidth="286.0" />
                         <TextField fx:id="txtCodigoAnuncio" layoutX="209.0" layoutY="144.0" prefHeight="25.0" prefWidth="286.0" />
-                        <TextField fx:id="txtProducto" layoutX="209.0" layoutY="267.0" prefHeight="25.0" prefWidth="286.0" />
                         <DatePicker fx:id="txtFechaInicio" layoutX="209.0" layoutY="192.0" prefHeight="25.0" prefWidth="285.0" />
                         <DatePicker fx:id="txtFechaFinal" layoutX="210.0" layoutY="230.0" prefHeight="25.0" prefWidth="285.0" />
                         <ImageView fitHeight="219.0" fitWidth="210.0" layoutX="582.0" layoutY="82.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
@@ -55,6 +54,7 @@
                               <Font size="14.0" />
                            </font>
                         </Button>
+                        <TextArea fx:id="txtProducto" layoutX="202.0" layoutY="271.0" prefHeight="137.0" prefWidth="308.0" />
                      </children>
                   </AnchorPane>
             </content>
