--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiAnuncioView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiAnuncioView.fxml
@@ -34,11 +34,7 @@
                         <TextField fx:id="txtCodigoAnuncio" layoutX="209.0" layoutY="144.0" prefHeight="25.0" prefWidth="286.0" />
                         <DatePicker fx:id="txtFechaInicio" layoutX="209.0" layoutY="192.0" prefHeight="25.0" prefWidth="285.0" />
                         <DatePicker fx:id="txtFechaFinal" layoutX="210.0" layoutY="230.0" prefHeight="25.0" prefWidth="285.0" />
-                        <ImageView fitHeight="219.0" fitWidth="210.0" layoutX="582.0" layoutY="82.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/AnuncioIcon.jpeg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="ImageViewProductoSeleccionado" fitHeight="219.0" fitWidth="210.0" layoutX="579.0" layoutY="154.0" pickOnBounds="true" preserveRatio="true" />
                         <Button fx:id="btnNuevo" layoutX="266.0" layoutY="463.0" mnemonicParsing="false" onAction="#limpiarCampos" onKeyPressed="#limpiarCamposTecla" prefHeight="37.0" prefWidth="111.0" style="-fx-background-color: white; -fx-border-color: #0697AE; -fx-cursor: hand;" text="Nuevo" textFill="#0697ae">
                            <font>
                               <Font size="14.0" />
@@ -55,6 +51,7 @@
                            </font>
                         </Button>
                         <TextArea fx:id="txtProducto" layoutX="202.0" layoutY="271.0" prefHeight="137.0" prefWidth="308.0" />
+                        <Label layoutX="579.0" layoutY="107.0" text="Imagen del producto" />
                      </children>
                   </AnchorPane>
             </content>
