--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiProductoView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiProductoView.fxml
@@ -92,7 +92,8 @@
                             <TableColumn fx:id="columCodigo" prefWidth="100.0" text="Código" />
                               <TableColumn fx:id="columPrecio" prefWidth="89.0" text="Precio" />
                               <TableColumn fx:id="columTipoProducto" prefWidth="151.0" text="Tipo de producto" />
-                              <TableColumn fx:id="columDescripcion" prefWidth="330.0" text="Descripción" />
+                              <TableColumn fx:id="columDescripcion" prefWidth="257.0" text="Descripción" />
+                              <TableColumn fx:id="columnAnunciado" prefWidth="156.0" text="¿Está anunciado?" />
                           </columns>
                         </TableView>
                         <Button fx:id="btnEliminarProducto" layoutX="266.0" layoutY="478.0" mnemonicParsing="false" onAction="#eliminarProducto" onKeyPressed="#eliminarProductoTecla" prefHeight="32.0" prefWidth="128.0" style="-fx-background-color: red;" text="Eliminar producto" textFill="WHITE">
